update: GetIngredientByID for Swagger
